src/test/ui/issue-18819.stderr
error[E0061]: this function takes 2 parameters but 1 parameter was supplied
  --> $DIR/issue-18819.rs:26:13
   |
21 | / fn print_x(_: &Foo<Item=bool>, extra: &str) {
22 | |     println!("{}", extra);
23 | | }
   | |_- defined here
...
26 |       print_x(X);
   |               ^ expected 2 parameters

error: aborting due to previous error

